# itreed

./: .gitignore  Makefile  Readme.md  app.js  app.less  config.js  convert.js  demo-data.js  demo.grl  downloader.js  dupload.js  format-picker.js  gorilla.less  index.css  index.html  index.js  modal.js  package.json  parse-ipython.js  registrar.js  run.js  run.less  test.ipynb  uploader.js  view.js  vincent.js
app/: app.less  browse.js  browse.less  downloader.js  dupload.js  dupload.less  files.js  header.js  header.less  history.js  importer.less  index.js  kernels.js  modal.js  new-file.js  new-file.less  saver.js  sourcerer.js  tabular.js  tabular.less  type-switcher.js  uploader.js
chromeapp/: background.js  manifest.json  shell.js  window.html
config/: css.js  index.js  index.less  plugin.js  shared.js  variants.js
demo/: build.css  build.js  gorilla-demo.js  index.html  ipython-demo.js  ipython.html  otherpython.html  vendor.js
formatters/: dom.js  gorilla.js  is-complex.js  js.js  js.less  latex.js  list-like.js  live-button.js  live.js  react.js  table.js  vega.js
itreed/: __init__.py  formatter.py  live.py  load_magic.py  magic.py  modules.py  vincent_json.py  wip_console.py
lib/: Gorilla.js  actions.js  app.js  convert.js  escoped.js  extend.js  globalize.js  index.js  index.less  ipython-body.js  is-complex.js  jsframe.js  jskernel.js  jsobj.js  kernel-config.js  kernel.js  keys.js  node.js  returnify.js  spinner.less  (+7 more)
lib/kernels/rust/: Cargo.toml  compile_inline.rs  index.js
lib/kernels/rust/src/: commented.rs  compile.rs  run.rs  server.rs
(+116 files in other folders)
